TAG:  lib_py_report-5-0-0-3
DATE: 04/11/2012
STAFF: lec
CHANGES:
1) TR11027; changes for MGI 5.0: fix
create_accession_anchor
create_imsrstrain_anchor
2) postgres options added

TAG:  lib_py_report-5-0-0-2
TAG:  lib_py_report-5-0-0-1
DATE: 03/28/2012
STAFF: lec
CHANGES:
1) TR11027; changes for MGI 5.0
create_accession_anchor
create_imsrstrain_anchor

TAG:  lib_py_report-3-5-1-5
DATE: 10/25/2007
STAFF: lec
CHANGES:
1) add create_accession_anchor/isANCHOR

TAG:  lib_py_report-3-5-1-4
DATE: 10/25/2006
STAFF: lec
CHANGES:
1) remove reportlib.trailer()

TAG:  lib_py_report-3-5-1-3
DATE: 10/13/2006
STAFF: lec
CHANGES:
1) TR7943

TAG:  lib_py_report-3-5-1-2
DATE: 10/12/2006
STAFF: lec
CHANGES:
1) TR7943

TAG:  lib_py_report-3-5-1-1
DATE: 10/06/2006
STAFF: lec
CHANGES:
1) TR7943

TAG:  lib_py_report-3-5-0-2
DATE: 8/15/2006
STAFF: dbm
CHANGES:
1) Pick up Install script change

TAG: lib_py_report-3-5-0-1
DATE: 05/01/2006
STAFF: dbm
CHANGES:
1) Merge configuration changes from tr6549 branch

TAG: lib_py_report-tr6594-1
DATE: 3/27/2006
STAFF: dbm
CHANGES: Initial tag for TR6594 testing

TAG: lib_py_report-tr6594-BP
DATE: 3/16/2006
STAFF: dbm
CHANGES: Branch point tag for configuration changes

TAG: lib_py_report-tr7193-BP
DATE: 11/30/2005
STAFF: lec
RELEASE: A
CHANGES:
branch point tag for Python upgrade

TAG: lib_py_report-3-1-0-1
DATE: 12/23/2004
STAFF: lec
RELEASE: A
CHANGES: added sqlOneConnection, sqlLogging

TAG: lib_py_report-4-0-1
TAG: lib_py_report-4-0-0
DATE: 03/11/2004
STAFF: lec
RELEASE: A
CHANGES: JSAM; add SERVER and DATABASE to header

TAG: lib_py_report-3-0-0
DATE: 04/14/2003
STAFF: lec
RELEASE: A
CHANGES: append .html to fileExt

TAG: lib_py_report-2-0-1
DATE: 04/24/2002
STAFF: lec
RELEASE: A
CHANGES: TR 3623; added fileExt to init()

TAG: lib_py_report-2-0-0
DATE: 11/06/2001
STAFF: lec
RELEASE: A
CHANGES: TR 3085; updated copyright

TAG: lib_py_report-1-0-6
DATE: 06/14/2000
STAFF: lec
RELEASE: A
CHANGES: no need to import "db"

TAG: lib_py_report-1-0-5